--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ header {
   max-width: 1200px;
 }
 
+.movie-image {
+width: 150px;
+  height: 50px;
+}
+
 .movie-card {
   border: 1px solid #ddd;
   border-radius: 5px;
