--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,7 @@ header {
   max-width: 1200px;
 }
 
-.movie-image {
-width: 150px;
-  height: 50px;
+.movie-image {width: 100%;
 }
 
 .movie-card {
